Fix for ext4 mount

--- a/archiso/airootfs/etc/calamares/modules/mount.conf
+++ b/archiso/airootfs/etc/calamares/modules/mount.conf
@@ -118,6 +118,8 @@ mountOptions:
       options: [ defaults ]
     - filesystem: efi
       options: [ defaults, umask=0077 ]
+    - filesystem: ext4
+      options: [ defaults ]
     - filesystem: btrfs
       options: [ defaults, compress=zstd:1 ]
     - filesystem: btrfs_swap
