--- a/archiso/airootfs/etc/calamares/modules/partition.conf
+++ b/archiso/airootfs/etc/calamares/modules/partition.conf
@@ -125,7 +125,7 @@ alwaysShowPartitionLabels: true
 # the user to modify.
 #
 # If nothing is specified, manual partitioning is enabled.
-#allowManualPartitioning:   true
+allowManualPartitioning:   true
 
 # Show not encrypted boot partition warning.
 #
