--- a/archiso/airootfs/etc/calamares/modules/users.conf
+++ b/archiso/airootfs/etc/calamares/modules/users.conf
@@ -274,7 +274,7 @@ user:
 hostname:
   location: EtcFile
   writeHostsFile: true
-  template: "derp-${cpu}"
+  template: "archlinux-"
   forbidden_names: [ localhost ]
 
 # Enable Active Directory enrollment support (opt-in)
