--- a/archiso/airootfs/etc/calamares/settings.conf
+++ b/archiso/airootfs/etc/calamares/settings.conf
@@ -122,12 +122,17 @@ instances:
   module:   packagechooser
   config:   packagechooser_kernel.conf
 
+- id:       display_manager
+  module:   packagechooser
+  config:   packagechooser_display_manager.conf
+
 sequence:
 - show:
   - welcome
   - locale
   - keyboard
   - packagechooser@kernel
+  - packagechooser@display_manager
   - partition
   - users
   - summary
@@ -138,6 +143,7 @@ sequence:
   - shellprocess@initialize_pacman
   - pacstrap
   - packagechooser@kernel
+  - packagechooser@display_manager
   - fstab
   - locale
   - keyboard
