Added script remove-ucode for remove the unnecessary ucode installed via pacstrap

--- a/archiso/airootfs/etc/calamares/modules/pacstrap.conf
+++ b/archiso/airootfs/etc/calamares/modules/pacstrap.conf
@@ -35,3 +35,5 @@ basePackages:
 # The paths should be relative to the host and the files will be copied to the
 # location in the installed system
 #
+postInstallFiles:
+  - "/usr/local/sbin/remove-ucode"
