Added new modules to the configuration

--- a/archiso/airootfs/etc/calamares/settings.conf
+++ b/archiso/airootfs/etc/calamares/settings.conf
@@ -118,6 +118,14 @@ instances:
   module:   shellprocess
   config:   shellprocess_initialize_pacman.conf
 
+- id:       remove_ucode
+  module:   shellprocess
+  config:   shellprocess_remove_ucode.conf
+
+- id:       cleaner
+  module:   shellprocess
+  config:   shellprocess_cleaner.conf
+
 - id:       kernel
   module:   packagechooser
   config:   packagechooser_kernel.conf
@@ -159,9 +167,11 @@ sequence:
   - hwclock
   - services-systemd
   - packages
+  - shellprocess@remove_ucode
   - grubcfg
   - bootloader
 #  - preservefiles
+  - shellprocess@cleaner
   - umount
 - show:
 #  - webview@owncloud
