Enabled paccache.timer

--- a/archiso/airootfs/etc/calamares/modules/services-systemd.conf
+++ b/archiso/airootfs/etc/calamares/modules/services-systemd.conf
@@ -55,3 +55,8 @@ units:
   - name: "NetworkManager.service"
     action: enable
     mandatory: true
+
+  - name: "paccache.timer"
+    action: enable
+    mandatory: true
+
